read me updates

--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -64,6 +64,9 @@
                         <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
                     </div>
                     <div class="card-body">
+                          <div id="loading_cserv">
+                            <img id="loading-image-cserv" src="{% static 'images/loading.gif' %}" alt="Loading..."/>
+                        </div>
                         <div class="text-left text-dark alert alert-info">
                             <strong>templates/WebApp/chart_from_ClimateSERV.html</strong> contains the HTML code to
                             modify
