--- a/templates/WebApp/chart_from_SQLite.html
+++ b/templates/WebApp/chart_from_SQLite.html
@@ -45,6 +45,9 @@
 
                     <!-- Card Body -->
                     <div class="card-body">
+                        <div id="loading_sql">
+                            <img id="loading-image-sql" src="{% static 'images/loading.gif' %}" alt="Loading..."/>
+                        </div>
                         <label>Select the station to show: </label>
                         <select id="stations">
                         </select>
