--- a/templates/WebApp/chart_from_netCDF.html
+++ b/templates/WebApp/chart_from_netCDF.html
@@ -59,8 +59,8 @@
                     </div>
                     <!-- Card Body -->
                     <div class="card-body">
-                        <div id="loading">
-                            <img id="loading-image" src="{% static 'images/loading.gif' %}" alt="Loading..."/>
+                        <div id="loading_nc">
+                            <img id="loading-image-nc" src="{% static 'images/loading.gif' %}" alt="Loading..."/>
                         </div>
                         <figure class="highcharts-figure">
                             <div id="chart-container"></div>
