--- a/templates/WebApp/home.html
+++ b/templates/WebApp/home.html
@@ -25,8 +25,8 @@
                 <div class="layer">
                 </div>
                 <div class="card-img-overlay">
-                    <div class="text-center text-white" style="height: 30vh;align-items: center;margin: 12vh;">
-                        <p style="font-size:2vw; font-family: Arial,serif; text-shadow: black 0.1em 0.1em 0.2em;">SERVIR
+                    <div class="text-center text-white" style="height: 30vh;align-items: center;margin: 10vh;">
+                        <p style="font-size:2rem; font-family: Arial,serif; text-shadow: black 0.1em 0.1em 0.2em;">SERVIR
                             Geospatial Application Template 2022 </p>
                         <p style="font-size:1vw; font-family: Arial,serif; text-shadow: black 0.1em 0.1em 0.2em;">
                             This web application shows simple implementation of common user interface elements in
@@ -50,7 +50,7 @@
 
             <!-- Page Heading -->
             <div class="row">
-                <div class="app-card col-lg-3 mb-4" style="height: 30vh">
+                <div class="app-card col-lg-3 mb-4 col-md-3 col-sm-3" style="height: 30vh">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4 h-100 img-thumbnail">
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card col-lg-3 mb-4" style="height: 30vh">
+                <div class="app-card col-lg-3 mb-4  col-md-3 col-sm-3" style="height: 30vh">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4  h-100 img-thumbnail">
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card col-lg-3 mb-4" style="height: 30vh">
+                <div class="app-card col-lg-3 mb-4  col-md-3 col-sm-3" style="height: 30vh">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4  h-100 img-thumbnail">
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card col-lg-3 mb-4" style="height: 30vh">
+                <div class="app-card col-lg-3 mb-4  col-md-3 col-sm-3" style="height: 30vh">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4  h-100 img-thumbnail">
@@ -119,7 +119,7 @@
                 </div>
                 {#                </div>#}
                 {#                <div class="row">#}
-                <div class="app-card col-lg-3 mb-4" style="height: 30vh">
+                <div class="app-card col-lg-3 mb-4  col-md-3 col-sm-3" style="height: 30vh">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4  h-100 img-thumbnail">
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card col-lg-3 mb-4" style="height: 30vh">
+                <div class="app-card col-lg-3 mb-4  col-md-3 col-sm-3" style="height: 30vh">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4   h-100 img-thumbnail">
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card col-lg-3 mb-4" style="height: 30vh">
+                <div class="app-card col-lg-3 mb-4  col-md-3 col-sm-3" style="height: 30vh">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4   h-100 img-thumbnail">
@@ -173,7 +173,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card col-lg-3 mb-4 ">
+                <div class="app-card col-lg-3 mb-4  col-md-3 col-sm-3">
                     <br>
 
                 </div>
