home page updates

--- a/templates/WebApp/home.html
+++ b/templates/WebApp/home.html
@@ -37,8 +37,6 @@
 
                     </div>
                 </div>
-
-
             </div>
         </div>
 
@@ -49,8 +47,8 @@
             </div>
 
             <!-- Page Heading -->
-            <div class="row">
-                <div class="app-card col-lg-3 mb-4 col-md-3 col-sm-3" style="height: 30vh">
+            <div class="row" style="display: flex;flex-flow:row wrap;justify-content:center">
+                <div class="app-card mb-4" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4 h-100 img-thumbnail">
@@ -65,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card col-lg-3 mb-4  col-md-3 col-sm-3" style="height: 30vh">
+                <div class="app-card mb-4" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4  h-100 img-thumbnail">
@@ -81,7 +79,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card col-lg-3 mb-4  col-md-3 col-sm-3" style="height: 30vh">
+                <div class="app-card mb-4" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4  h-100 img-thumbnail">
@@ -98,7 +96,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card col-lg-3 mb-4  col-md-3 col-sm-3" style="height: 30vh">
+                <div class="app-card mb-4" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4  h-100 img-thumbnail">
@@ -119,7 +117,7 @@
                 </div>
                 {#                </div>#}
                 {#                <div class="row">#}
-                <div class="app-card col-lg-3 mb-4  col-md-3 col-sm-3" style="height: 30vh">
+                <div class="app-card mb-4" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4  h-100 img-thumbnail">
@@ -138,7 +136,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card col-lg-3 mb-4  col-md-3 col-sm-3" style="height: 30vh">
+                <div class="app-card mb-4" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4   h-100 img-thumbnail">
@@ -157,7 +155,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card col-lg-3 mb-4  col-md-3 col-sm-3" style="height: 30vh">
+                <div class="app-card mb-4" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4   h-100 img-thumbnail">
@@ -173,12 +171,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card col-lg-3 mb-4  col-md-3 col-sm-3">
+                <div class="app-card mb-4">
                     <br>
 
                 </div>
                 <!-- Content Row -->
-                <div class="row">
+                <div class="row">`
                     <div class="col-lg-12 mb-4">
                         <br>
                         <!-- Illustrations -->
