home page updates

--- a/templates/WebApp/home.html
+++ b/templates/WebApp/home.html
@@ -25,10 +25,10 @@
                 <div class="layer">
                 </div>
                 <div class="card-img-overlay">
-                    <div class="text-center text-white" style="height: 30vh;align-items: center;margin: 10vh;">
-                        <p style="font-size:2rem; font-family: Arial,serif; text-shadow: black 0.1em 0.1em 0.2em;">SERVIR
+                    <div class="text-center text-white">
+                        <p style="padding-top:12vb;width:50%;margin:auto;font-size:3vb; font-family: Arial,serif; text-shadow: black 0.1em 0.1em 0.2em;">SERVIR
                             Geospatial Application Template 2022 </p>
-                        <p style="font-size:1vw; font-family: Arial,serif; text-shadow: black 0.1em 0.1em 0.2em;">
+                        <p style="padding-top:2vb;width:50%;margin:auto;font-size:1.5vb; font-family: Arial,serif; text-shadow: black 0.1em 0.1em 0.2em;">
                             This web application shows simple implementation of common user interface elements in
                             geospatial
                             information delivery. It is intended to be used as a starting point for building new
