--- a/templates/WebApp/home.html
+++ b/templates/WebApp/home.html
@@ -47,7 +47,7 @@
             </div>
 
             <!-- Page Heading -->
-            <div class="row" style="display: flex;flex-flow:row wrap;justify-content:center">
+            <div class="row" style="display: flex;flex-flow:row wrap;justify-content:center;box-shadow: black">
                 <div class="app-card mb-4" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
@@ -155,7 +155,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card mb-4" style="height: 30vh;width:40vh;">
+                <div class="app-card" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
                     <div class="card shadow mb-4   h-100 img-thumbnail">
@@ -171,10 +171,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="app-card mb-4">
-                    <br>
 
-                </div>
                 <!-- Content Row -->
                 <div class="row">`
                     <div class="col-lg-12 mb-4">
