card shadow and background update

--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid">
+    <div class="container-fluid" style="background: #e1e3e5">
         <div class="row d-flex justify-content-center">
             <!-- Line Chart -->
             <div class="col-xl-12 col-lg-12 text-center mt-4">
