--- a/templates/WebApp/chart_from_SQLite.html
+++ b/templates/WebApp/chart_from_SQLite.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid">
+    <div class="container-fluid" style="background: #e1e3e5">
         <div class="row d-flex justify-content-center mt-5">
             <!-- Area Chart -->
             <div class="col-xl-12 col-lg-12">
