--- a/templates/WebApp/home.html
+++ b/templates/WebApp/home.html
@@ -12,7 +12,7 @@
 
 <!-- Begin Page Content -->
 {% block content %}
-    <div class="align-items-center justify-content-between">
+    <div class="align-items-center justify-content-between" style="background: #e1e3e5">
         <div class="card">
             <div>
                 <img
@@ -51,7 +51,7 @@
                 <div class="app-card mb-4" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
-                    <div class="card shadow mb-4 h-100 img-thumbnail">
+                    <div class="card shadow mb-4 mr-4 h-100 img-thumbnail">
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">Map Fixed Size</h6>
                         </div>
@@ -66,7 +66,7 @@
                 <div class="app-card mb-4" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
-                    <div class="card shadow mb-4  h-100 img-thumbnail">
+                    <div class="card shadow mb-4 mr-4 h-100 img-thumbnail">
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">Map Fullscreen</h6>
                         </div>
@@ -82,7 +82,7 @@
                 <div class="app-card mb-4" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
-                    <div class="card shadow mb-4  h-100 img-thumbnail">
+                    <div class="card shadow mb-4  mr-4 h-100 img-thumbnail">
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">GEE Map</h6>
                         </div>
@@ -99,7 +99,7 @@
                 <div class="app-card mb-4" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
-                    <div class="card shadow mb-4  h-100 img-thumbnail">
+                    <div class="card shadow mb-4  mr-4 h-100 img-thumbnail">
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">Chart from NetCDF</h6>
                         </div>
@@ -120,7 +120,7 @@
                 <div class="app-card mb-4" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
-                    <div class="card shadow mb-4  h-100 img-thumbnail">
+                    <div class="card shadow mb-4  mr-4 h-100 img-thumbnail">
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">Chart ClimateSERV</h6>
                         </div>
@@ -139,7 +139,7 @@
                 <div class="app-card mb-4" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
-                    <div class="card shadow mb-4   h-100 img-thumbnail">
+                    <div class="card shadow mb-4   mr-4 h-100 img-thumbnail">
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">Chart Data Model</h6>
                         </div>
@@ -158,7 +158,7 @@
                 <div class="app-card" style="height: 30vh;width:40vh;">
                     <br>
                     <!-- Illustrations -->
-                    <div class="card shadow mb-4   h-100 img-thumbnail">
+                    <div class="card shadow mb-4  mr-4  h-100 img-thumbnail">
                         <div class="card-header py-3">
                             <h6 class="m-0 font-weight-bold text-primary">Update Data Model</h6>
                         </div>
