--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -31,7 +31,7 @@
 {% block content %}
 
 
-    <div class="container-fluid">
+    <div class="container-fluid" style="background: #e1e3e5">
         <div class="row">
             <div class="col-xl-12 col-lg-12">
                 <br>
