--- a/templates/WebApp/app_base.html
+++ b/templates/WebApp/app_base.html
@@ -25,7 +25,7 @@
 <div id="wrapper">
     <div id="content-wrapper" class="d-flex flex-column">
         <!-- Main Content -->
-        <div id="content">
+        <div id="content" style="background: #e1e3e5">
             <div class="row bg-white">
                 <div class="col-lg-12 h-50">
 
