--- a/templates/WebApp/update_datamodel.html
+++ b/templates/WebApp/update_datamodel.html
@@ -12,7 +12,7 @@
 
 <!-- Begin Page Content -->
 {% block content %}
-    <div class="container-fluid">
+    <div class="container-fluid" style="background: #e1e3e5">
 
         <div class="card shadow mt-4 mb-4">
             <div class="card-header py-3">
