added gee conditional statements and localstorage

--- a/templates/WebApp/home.html
+++ b/templates/WebApp/home.html
@@ -26,7 +26,8 @@
                 </div>
                 <div class="card-img-overlay">
                     <div class="text-center text-white">
-                        <p style="padding-top:12vb;width:50%;margin:auto;font-size:3vb; font-family: Arial,serif; text-shadow: black 0.1em 0.1em 0.2em;">SERVIR
+                        <p style="padding-top:12vb;width:50%;margin:auto;font-size:3vb; font-family: Arial,serif; text-shadow: black 0.1em 0.1em 0.2em;">
+                            SERVIR
                             Geospatial Application Template 2022 </p>
                         <p style="padding-top:2vb;width:50%;margin:auto;font-size:1.5vb; font-family: Arial,serif; text-shadow: black 0.1em 0.1em 0.2em;">
                             This web application shows simple implementation of common user interface elements in
