--- a/templates/WebApp/about.html
+++ b/templates/WebApp/about.html
@@ -92,6 +92,24 @@
             <div class="col-lg-12 mb-4">
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
+                        <h6 class="m-0 font-weight-bold text-primary">Logos</h6>
+                    </div>
+                    <div class="card-body text-center">
+                                                    <a href=""><img src="{% static 'images/logos/AMZ_Alliance.jpg' %}"></a>
+                             <a href=""><img src="{% static 'images/logos/ICRISAT.jpg' %}"></a>
+                             <a href=""><img src="{% static 'images/logos/RCMRD.jpg' %}"></a>
+                             <a href=""><img src="{% static 'images/logos/ICIMOD.jpg' %}"></a>
+                             <a href=""><img src="{% static 'images/logos/ADPC.jpg' %}"></a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12 mb-4">
+                <div class="card shadow mb-4">
+                    <div class="card-header py-3">
                         <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
                     </div>
                     <div class="card-body">
