added image for reference in

--- a/WebApp/static/css/map1.css
+++ b/WebApp/static/css/map1.css
@@ -207,3 +207,7 @@ label {
 #loading-image, #loading-image-gee, #loading-image-fixed, #loading-image-full, #loading-image-nc, #loading-image-cserv, #loading-image-sql {
     z-index: 500;
 }
+#map_nc{
+    height:300px;
+    width: 300px;
+}
