--- a/templates/WebApp/about.html
+++ b/templates/WebApp/about.html
@@ -95,11 +95,11 @@
                         <h6 class="m-0 font-weight-bold text-primary">Logos</h6>
                     </div>
                     <div class="card-body text-center">
-                                                    <a href=""><img src="{% static 'images/logos/AMZ_Alliance.jpg' %}"></a>
-                             <a href=""><img src="{% static 'images/logos/ICRISAT.jpg' %}"></a>
-                             <a href=""><img src="{% static 'images/logos/RCMRD.jpg' %}"></a>
-                             <a href=""><img src="{% static 'images/logos/ICIMOD.jpg' %}"></a>
-                             <a href=""><img src="{% static 'images/logos/ADPC.jpg' %}"></a>
+                        <a href="" class="p-3"><img src="{% static 'images/logos/AMZ_Alliance.jpg' %}"></a>
+                             <a href="" class="p-3"><img src="{% static 'images/logos/ICRISAT.jpg' %}"></a>
+                             <a href="" class="p-3"><img src="{% static 'images/logos/RCMRD.jpg' %}"></a>
+                             <a href="" class="p-3"><img src="{% static 'images/logos/ICIMOD.jpg' %}"></a>
+                             <a href="" class="p-3"><img src="{% static 'images/logos/ADPC.jpg' %}"></a>
 
                     </div>
                 </div>
