--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -51,7 +51,7 @@
             <div class="col-lg-12 mb-4">
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
+                        <h6 class="m-0 font-weight-bold text-primary">About this page</h6>
                     </div>
                     <div class="card-body">
                         <label class="form-label" for="sampleFile">Please download a sample geojson file <a
