--- a/templates/WebApp/chart_from_SQLite.html
+++ b/templates/WebApp/chart_from_SQLite.html
@@ -65,7 +65,7 @@
             <div class="col-lg-12 mb-4">
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
+                        <h6 class="m-0 font-weight-bold text-primary">About this page</h6>
                     </div>
                     <div class="card-body">
                         <div class="text-left text-dark alert alert-info">
