--- a/templates/WebApp/chart_from_netCDF.html
+++ b/templates/WebApp/chart_from_netCDF.html
@@ -71,6 +71,7 @@
                     </div>
                     <!-- Card Body -->
                     <div class="card-body">
+                        <label>Geographic extent of the info in the NetCDF used in this example</label>
                         <div id="map_nc_img" class="m-auto">
                             <img src="{% static 'images/static_nc.PNG' %}" height="250px">
                         </div>
@@ -90,7 +91,7 @@
                         <figure class="highcharts-figure">
                             <div id="chart-container"></div>
                             <p class="highcharts-description">
-                                This chart shows the use of a Line charts.
+                                This example extracts and summarizes Air Quality data from a NetCDF file according to the boundary provided by the uploaded geojson file.
                         </figure>
 
                     </div>
@@ -101,19 +102,14 @@
             <div class="col-lg-12 mb-4">
                 <div class="card shadow mb-4">
                     <div class="card-header py-3">
-                        <h6 class="m-0 font-weight-bold text-primary">Modifying this page</h6>
+                        <h6 class="m-0 font-weight-bold text-primary">About this page</h6>
                     </div>
-                    <div class="card-body">
-                        <label
-                                class="form-label" for="sampleFile">Please download a sample geojson file <a
-                                href="{% static 'js/sample.geojson' %}" download>here</a></label>
-                        <br>
-                        <label
-                                class="form-label" for="sampleFile">Please download a sample netCDF file <a
-                                href="{{ netcdf_path }}" download>here</a></label>
+                   <div class="card-body">
                         <div class="text-left text-dark alert alert-info">
                             <strong>templates/WebApp/chart_from_netCDF.html</strong> contains the HTML code to modify
                             the text and graphics in this page.
+                            <hr>
+                            Download Resources: <a href="/static/js/sample.geojson" class="btn btn-light">Sample geojson file</a> <a href="/servir_apps/data/app_template/20191123.nc" class="btn btn-light">NetCDF file used in the example</a>
                         </div>
                     </div>
                 </div>
