--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -28,7 +28,7 @@
     <style>
 
         .sidenav {
-            height: 100%;
+            height: calc(100vh - 165px);
             padding: 0px;
 
             width: 0;
@@ -72,7 +72,6 @@
                 font-size: 18px;
             }
         }
-
 
     </style>
 
