--- a/templates/WebApp/about.html
+++ b/templates/WebApp/about.html
@@ -42,22 +42,22 @@
                         <div class="row row-centered pos">
                             <div class="col-sm-3">
                                 <div><img src="{% static 'images/teammembers/TeamMember1.jpg' %}" alt="img1"
-                                          class="img-thumbnail">
+                                          class="img-thumbnail" style="border-radius: 7rem;">
                                     <p>Team member 1</p></div>
                             </div>
                             <div class="col-sm-3">
                                 <div><img src="{% static 'images/teammembers/TeamMember2.jpg' %}" alt="img1"
-                                          class="img-thumbnail">
+                                          class="img-thumbnail" style="border-radius: 7rem;">
                                     <p>Team member 2</p></div>
                             </div>
                             <div class="col-sm-3">
                                 <div><img src="{% static 'images/teammembers/TeamMember3.jpg' %}" alt="img1"
-                                          class="img-thumbnail">
+                                          class="img-thumbnail" style="border-radius: 7rem;">
                                     <p>Team member 3</p></div>
                             </div>
                             <div class="col-sm-3">
                                 <div><img src="{% static 'images/teammembers/TeamMember4.jpg' %}" alt="img1"
-                                          class="img-thumbnail">
+                                          class="img-thumbnail" style="border-radius: 7rem;">
                                     <p>Team member 4</p></div>
                             </div>
                         </div>
